[package]
name = "canvas"
version = "0.1.0"
authors = ["The wasm-bindgen Developers"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.27"
wasm-bindgen = "0.2.50"
rand = { version = "0.7.2", features = ["wasm-bindgen"] }

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
  'console',
  'Performance',
  'PerformanceTiming'
]
